add cv downloading

--- a/cv.html
+++ b/cv.html
@@ -122,7 +122,8 @@
               <img src="/assets/git.png" alt="git" class="icone" title="Git">
               <img src="/assets/github.png" alt="github" class="icone" title="Github">
               <img src="/assets/vscode-logo-2.png" alt="VsCode" class="icone" title="VsCode">
-              <img src="/assets/Microsoft_Office-Logo.png" alt="microsoft office" class="icone" title="Office">
+              <img src="/assets/storybook-icon.png" alt="storybook" class="icone" title="Storybook">
+              <img src="/assets/cypress-logo.png" alt="cypress" class="icone" title="Cypress">
             </p>
             <p class="col-12 col-lg-4">
               <img src="/assets/protools.png" alt="protools" class="icone" title="Avid Protools">
@@ -306,6 +307,10 @@
         <li>Autres : lecture, peinture/dessin, menuiserie/lutherie, jeux-vidéo</li>
       </ul>
     </article>
+
+    <hr>
+
+    <p>Vous préférez imprimer mon CV ? Cliquez sur <a href="/assets/CV Pierre Loup PEREZ.pdf" download="CV-Pierre-Loup-PEREZ">ce lien</a>.</p>
 
     <!-- CTA -->
     <article class="text-center alert alert-info shadow">
