add links to tech logos

--- a/cv.html
+++ b/cv.html
@@ -98,37 +98,37 @@
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-2">WebDev</h4>
             <p class="col-12 col-lg-6">
-              <img src="/assets/js.png" alt="Js" class="icone" title="Js">
-              <img src="/assets/typescript.png" alt="typescript" class="icone" title="Typescript">
-              <img src="/assets/vue-js-logo.png" alt="vue" class="icone" title="VueJs">
-              <img src="/assets/html.png" alt="Html" class="icone" title="Html 5">
-              <img src="/assets/css.png" alt="Css" class="icone" title="Css 3">
-              <img src="/assets/tailwind.png" alt="tailwind" class="icone" title="Tailwind Css">
-              <img src="/assets/bootstrap-logo.png" alt="bootstrap" class="icone" title="Bootstrap">
+              <a href="https://www.javascript.com/" target="_blank"><img src="/assets/js.png" alt="javascript" class="icone" title="Javascript"></a>
+              <a href="https://www.typescriptlang.org/" target="_blank"><img src="/assets/typescript.png" alt="typescript" class="icone" title="Typescript"></a>
+              <a href="https://vuejs.org/" target="_blank"><img src="/assets/vue-js-logo.png" alt="vue" class="icone" title="VueJs"></a>
+              <a href="https://html.spec.whatwg.org/multipage/" target="_blank"><img src="/assets/html.png" alt="Html" class="icone" title="Html 5"></a>
+              <a href="https://www.w3.org/Style/CSS/Overview.en.html" target="_blank"><img src="/assets/css.png" alt="Css" class="icone" title="Css 3"></a>
+              <a href="https://tailwindcss.com/" target="_blank"><img src="/assets/tailwind.png" alt="tailwind" class="icone" title="Tailwind Css"></a>
+              <a href="https://getbootstrap.com/" target="_blank"><img src="/assets/bootstrap-logo.png" alt="bootstrap" class="icone" title="Bootstrap"></a>
             </p>
             <p class="col-12 col-lg-4">
-              <img src="/assets/nodejs-1-logo.png" alt="NodeJs" class="icone" title="Node Js">
-              <img src="/assets/php-logo-png-transparent.png" alt="Php" class="icone" title="Php">
-              <img src="/assets/mysql-5-logo-png-transparent.png" alt="Mysql" class="icone" title="Mysql">
-              <img src="/assets/laravel.png" alt="Laravel" class="icone" title="Laravel">
-              <img src="/assets/java.png" alt="Java" class="icone" title="Java">
+              <a href="https://nodejs.org/en/" target="_blank"><img src="/assets/nodejs-1-logo.png" alt="NodeJs" class="icone" title="Node Js"></a>
+              <a href="https://www.php.net/" target="_blank"><img src="/assets/php-logo-png-transparent.png" alt="Php" class="icone" title="Php"></a>
+              <a href="https://www.mysql.com/" target="_blank"><img src="/assets/mysql-5-logo-png-transparent.png" alt="Mysql" class="icone" title="Mysql"></a>
+              <a href="https://laravel.com/" target="_blank"><img src="/assets/laravel.png" alt="Laravel" class="icone" title="Laravel"></a>
+              <a href="https://www.java.com/" target="_blank"><img src="/assets/java.png" alt="Java" class="icone" title="Java"></a>
             </p>
           </section>
           <hr class="mx-5">
           <section class="row">
             <h4 class="col-12 col-lg-2">Divers</h4>
             <p class="col-12 col-lg-5">
-              <img src="/assets/wordpress_PNG51.png" alt="Wordpress" class="icone" title="Wordpress">
-              <img src="/assets/git.png" alt="git" class="icone" title="Git">
-              <img src="/assets/github.png" alt="github" class="icone" title="Github">
-              <img src="/assets/vscode-logo-2.png" alt="VsCode" class="icone" title="VsCode">
-              <img src="/assets/storybook-icon.png" alt="storybook" class="icone" title="Storybook">
-              <img src="/assets/cypress-logo.png" alt="cypress" class="icone" title="Cypress">
+              <a href="https://wordpress.com/fr/" target="_blank"><img src="/assets/wordpress_PNG51.png" alt="Wordpress" class="icone" title="Wordpress"></a>
+              <a href="https://git-scm.com/" target="_blank"><img src="/assets/git.png" alt="git" class="icone" title="Git"></a>
+              <a href="https://github.com/" target="_blank"><img src="/assets/github.png" alt="github" class="icone" title="Github"></a>
+              <a href="https://code.visualstudio.com/" target="_blank"><img src="/assets/vscode-logo-2.png" alt="VsCode" class="icone" title="VsCode"></a>
+              <a href="https://storybook.fr.softonic.com/" target="_blank"><img src="/assets/storybook-icon.png" alt="storybook" class="icone" title="Storybook"></a>
+              <a href="https://www.cypress.io/" target="_blank"><img src="/assets/cypress-logo.png" alt="cypress" class="icone" title="Cypress"></a>
             </p>
             <p class="col-12 col-lg-4">
-              <img src="/assets/protools.png" alt="protools" class="icone" title="Avid Protools">
-              <img src="/assets/finale.png" alt="finale" class="icone" title="Makemusic Finale">
-              <img src="/assets/samplitude.png" alt="samplitude" class="icone" title="Magix Samplitude">
+              <a href="https://www.avid.com/fr/pro-tools" target="_blank"><img src="/assets/protools.png" alt="protools" class="icone" title="Avid Protools"></a>
+              <a href="https://www.finalemusic.com/" target="_blank"><img src="/assets/finale.png" alt="finale" class="icone" title="Makemusic Finale"></a>
+              <a href="https://www.magix.com/us/music-editing/samplitude/" target="_blank"><img src="/assets/samplitude.png" alt="samplitude" class="icone" title="Magix Samplitude"></a>
             </p>
           </section>
           <hr class="mx-5">
