--- a/presentation.html
+++ b/presentation.html
@@ -82,7 +82,7 @@
       <p>Ayant un passé de <a href="#musmili">musicien-militaire</a>, je peux vous faire profiter d'expériences
         incomparables, et d'un savoir-être très apprécié par mes collègues.</p>
       <p>Parmi mes traits de caractère, les plus présents sont ces <a href="#3c">"3C"</a> qui me tiennent
-        particulièrement à coeur: être créatif, toujours rester constructif, et ne jamais arrêter d'être curieux.</p>
+        particulièrement à coeur: être créatif, toujours rester constructif, et ne jamais cesser d'être curieux.</p>
     </article>
 
     <hr class="mx-5 bg-primary">
@@ -128,13 +128,12 @@
       </section>
       <section class="col-12">
         <h4>Stage chez <a href="https://www.bedrockstreaming.com/" target="_blank">BedrockStreaming</a></h4>
-        <p>Durant ce stage dans cette entreprise proposant un <abbr title="Software as a service">Saas</abbr> de streaming de videos pour le groupe M6 et les chaines du groupe RTL.</p>
-        <p>J'ai intégré la Product Line "Customer tools" responsable du back-office et plus précisément au sein de cette dernière, l'équipe Moonlight, en charge du développement front.</p>
-        <p>Ce stage m'a permis de travailler avec le framework <a href="https://vuejs.org/" target="_blank">VueJs</a> dans lequel j'ai principalement travaillé à la réalisation d'un composant d'upload d'image et à son intégration dans le back-office.</p>
-        <p>Pour cela, me suis occupé de la création du composant en VueJs,comprenant une zone de glisser-déposer, un bouton de selection de fichier, des test coté client des dimensions d'image et du type de fichier, ainsi que de l'affichage de l'image sélectionnée (provenant de l'utilisateur ou du serveur si une image était précédemment chargee) et d'une modification de l'affichage en fonction de la présence ou non d'une image affichée.</p>
-        <p>J'ai ensuite créé les tests unitaires et les test d'accessibilité avec <a href="https://storybook.fr.softonic.com/" target="_blank">Storybook</a>,les tests <abbr title="End-to-end">E2E</abbr> avec <a href="https://www.cypress.io/" target="_blank">Cypress</a> ainsi que la rédaction de la documentation technique (en anglais) concernant ces trois types de test.</p>
-        <p>A la suite de cela, j'ai intégré le composant dans une des application du back-office en réalisant l'intégration puis le branchement du composant à l'API pour l'afficher dynamiquement selon les attentes du serveur (en terme de format d'image et de type de fichier). Enfin, j'ai ajouté l'envoi des commandes d'ajout ou de suppression d'image au serveur.</p>
-        <p>Tout cela a été fait en suivant les règles de workflow de l'équipe, principalement concernant le process de déploiement(GitHub-CI/CD), le linting et formatting des fichiers et les revues de code.</p>
+        <p>Durant ce stage dans cette entreprise proposant un <abbr title="Software as a service">Saas</abbr> de streaming de videos pour le groupe M6 et les chaines du groupe RTL, j'ai intégré la Product Line "Customer tools" responsable du back-office et plus précisément au sein de cette dernière, l'équipe Moonlight, en charge du développement front.</p>
+        <p>Ce stage m'a permis de travailler avec le framework <a href="https://vuejs.org/" target="_blank">VueJs</a> dans lequel j'ai principalement travaillé à la réalisation d'un composant d'upload d'images et à son intégration dans le back-office.</p>
+        <p>Pour cela, je me suis occupé de la création du composant en VueJs, comprenant une zone de glisser-déposer, un bouton de selection de fichiers, des tests coté client des dimensions d'image et du type de fichier, ainsi que de l'affichage de l'image sélectionnée (provenant de l'utilisateur ou du serveur si une image était précédemment chargée) et d'une modification de l'affichage en fonction de la présence ou non d'une image affichée.</p>
+        <p>J'ai ensuite créé les tests unitaires et les tests d'accessibilité avec <a href="https://storybook.fr.softonic.com/" target="_blank">Storybook</a>, les tests <abbr title="End-to-end">E2E</abbr> avec <a href="https://www.cypress.io/" target="_blank">Cypress</a> ainsi que la rédaction de la documentation technique (en anglais) concernant ces trois types de test.</p>
+        <p>A la suite de cela, j'ai intégré le composant dans une des applications du back-office en réalisant l'intégration puis le branchement du composant à l'API pour l'afficher dynamiquement selon les attentes du serveur (en terme de format d'image et de type de fichier). Enfin, j'ai ajouté l'envoi des commandes d'ajout ou de suppression d'image au serveur.</p>
+        <p>Tout cela a été fait en suivant les règles de workflow de l'équipe, principalement concernant le process de déploiement (GitHub-CI/CD), le linting et formatting des fichiers et les revues de code.</p>
 
       </section>
     </article>
@@ -149,23 +148,23 @@
       <section>
         <h4 class="ms-3">Expériences</h4>
         <p>Presque <strong>11 ans de service</strong>, à la date de création de ce site web, m'ont apporté une
-          expérience de la vie et du monde du travail à nulle autre pareille</p>
+          expérience de la vie et du monde du travail à nulle autre pareille.</p>
         <p>J'ai appris à gérer des situations de stress, mais également à <strong>optimiser l'efficience</strong> d'une
           période de calme comme celle d'une urgence.</p>
         <p>Ces expériences m'ont appris également à être <strong>résistant sur la durée</strong>, rester
           <strong>obstinément fixé à mes objectifs</strong> et à <strong>m'adapter à toutes les situations
-          </strong>possibles</p>
+          </strong>possibles.</p>
       </section>
       <section>
         <h4 class="ms-3">Savoir être</h4>
         <p>Vous trouverez en moi quelqu'un d'à la fois <strong>autonome</strong> et appréciant le <strong>travail en
-            équipe</strong></p>
+            équipe</strong>.</p>
         <p>Je n'ai aucun problème pour trouver ma place dans une ambiance de travail, dans une équipe, et j'ai une
-          facilité à apporter de la cohésion dans une équipe, car c'est un élément très fort de ma personnalité</p>
+          facilité à apporter de la cohésion dans une équipe, car c'est un élément très fort de ma personnalité.</p>
         <p>Le respect est profondément ancré en moi, envers tout un chacun, quel que soit son rang social ou sa position
-          dans l'entreprise</p>
+          dans l'entreprise.</p>
       </section>
-      <p>N'hésitez pas à <a href="/contact.html">me demander</a> plus d'information à ce sujet</p>
+      <p>N'hésitez pas à <a href="/contact.html">me demander</a> plus d'information à ce sujet.</p>
     </article>
 
     <hr class="mx-5 bg-primary">
@@ -177,10 +176,10 @@
       </h3>
       <section>
         <h4 class="ms-3">Créatif</h4>
-        <p>La <strong>Créativité</strong> est, et à toujours été, un élément central de mon caractère. Au point d'en
+        <p>La <strong>Créativité</strong> est, et à toujours été, un élément central de mon caractère, au point d'en
           être quelquefois un besoin presque pathologique.</p>
         <p>Pour en savoir plus, visitez <a href="/pilou_art/">ma galerie d'image</a> par exemple, ou demandez-moi en
-          suivant le lien ci-dessous.</p>
+          suivant le lien de contact ci-dessous.</p>
       </section>
       <section>
         <h4 class="ms-3">Constructif</h4>
