--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,11 @@
 
     <!-- Formulaire -->
     <form name="contactPortfolio" method="post" netlify-honeypot="bot-field" data-netlify="true">
-      <h2><img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Formulaire de contact</h2>
+      <h2>
+        <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
+         Formulaire de contact 
+         <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
+        </h2>
       <p class="hidden">
         <label>Ne remplissez pas ceci si vous êtes un humain: <input name="bot-field" /></label>
       </p>
