--- a/cv.html
+++ b/cv.html
@@ -93,7 +93,8 @@
         <!-- Competences -->
         <article>
           <h3 class="mb-3 alert alert-secondary shadow-sm">
-            <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Competences
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2"> Competences
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
           </h3>
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-2">WebDev</h4>
@@ -151,7 +152,8 @@
         <!-- Expériences -->
         <article>
           <h3 class="alert alert-secondary shadow-sm">
-            <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Experiences
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2"> Experiences 
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
           </h3>
           <section class="row align-items-center">
             <h4 class="col-12 col-lg-3">Jan-Fev 2022</h4>
@@ -208,7 +210,8 @@
         <!-- Formations -->
         <aside>
           <h3 class="alert alert-secondary shadow-sm">
-            <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Formations
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2"> Formations 
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
           </h3>
           <section>
             <h4>2021-2022</h4>
@@ -238,7 +241,8 @@
         <!-- Certifications -->
         <aside>
           <h3 class="alert alert-secondary shadow-sm col-12">
-            <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Certifications
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2"> Certifications 
+            <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
           </h3>
           <div class="row">
 
@@ -298,7 +302,8 @@
     <!-- Pied du CV - Intérêts -->
     <article class="row align-items-center justify-content-evenly mx-1">
       <h3 class="col-12 col-md-3 alert alert-secondary shadow-sm">
-        <img src="/assets/favicon.ico" alt="mini-logo" class="icone"> Intérêts
+        <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2"> Intérêts 
+        <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
       </h3>
       <ul class="col-12 col-md-8 text-start">
         <li>Informatique : intérêt personnel pour la Cybersécurité</li>
