--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <img src="/assets/android-chrome-512x512.png" alt="logo pilou dev Web" class="col-12 col-md-4">
       <h2 class="col-12 col-md-4">Qui suis-je?</h2>
       <section class="col-12 col-md-4 justify-content-center">
-        <p>Développeur Web Fullstack Junior</p>
+        <p>Développeur Web - Javascript (VueJs)</p>
         <p>Ancien Musicien-militaire reconverti</p>
         <p>Créatif/Constructif/Curieux</p>
         <a href="/presentation.html">en savoir plus</a>
