--- a/presentation.html
+++ b/presentation.html
@@ -90,8 +90,9 @@
     <article id="devweb" class="row mt-5">
       <section class="col-12">
         <h3>
-          <img src="/assets/favicon.ico" alt="mini-logo" class="icone">
-          Développeur Web Fullstack Junior
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
+          Développeur Web - Javascript (VueJs)
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
         </h3>
         <p>Durant ma formation de Développeur Web et Web Mobile au GRETA Lyon-Métropole puis mon stage chez <a
             href="https://www.bedrockstreaming.com/" target="_blank">BedrockStreaming</a>, j'ai été formé à travailler
@@ -124,6 +125,7 @@
           <li>SEO et référencement</li>
           <li>Responsivité</li>
           <li>Accessibilité</li>
+          <li>Tests unitaires et fonctionnels</li>
         </ul>
       </section>
       <section class="col-12">
@@ -142,8 +144,9 @@
 
     <article id="musmili" class="mt-5">
       <h3>
-        <img src="/assets/favicon.ico" alt="mini-logo" class="icone">
+        <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
         Ancien Musicien-militaire reconverti
+        <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
       </h3>
       <section>
         <h4 class="ms-3">Expériences</h4>
@@ -171,8 +174,9 @@
 
     <article id="3c" class="mt-5">
       <h3>
-        <img src="/assets/favicon.ico" alt="mini-logo" class="icone">
+        <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
         Les "3C": Créatif/Constructif/Curieux
+        <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
       </h3>
       <section>
         <h4 class="ms-3">Créatif</h4>
