--- a/projets.html
+++ b/projets.html
@@ -112,8 +112,9 @@
       </section>
       <section class="txtProj col-12 col-lg-6 mt-1">
         <h3>
-          <img src="/assets/favicon.ico" alt="mini-logo" class="icone">
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
           Projet Bootstrap et Js
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
         </h3>
         <p>Mon portfolio est l'occasion pour moi de mettre en pratique mes cours sur bootstrap et de réaliser une
           animation en Javascript.</p>
@@ -141,8 +142,9 @@
       </section>
       <section class="txtProj col-12 col-lg-6 mt-1 d-grid">
         <h3>
-          <img src="/assets/favicon.ico" alt="mini-logo" class="icone">
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
           Projet Wordpress
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
         </h3>
         <p>Ce projet est pour moi presque un prétexte pour découvrir <a href="https://wordpress.com/fr/"
             target="_blank">Wordpress</a>. Qu'on apprécie ou non ce CMS, il n'en est pas moins un incontournable outil
@@ -169,8 +171,9 @@
       </section>
       <section class="txtProj col-12 col-lg-6 mt-1">
         <h3>
-          <img src="/assets/favicon.ico" alt="mini-logo" class="icone">
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
           Projet "from scratch" avec Scss et Js
+          <img src="/assets/favicon.ico" alt="mini-logo" class="mini-logo mb-2">
         </h3>
         <p>Ce site est une galerie des dessins que je fais à mes heures perdues et que je partage habituellement sur <a
             href="https://www.instagram.com/pilou_art/" target="_blank">Instagram</a></p>
