--- a/cv.html
+++ b/cv.html
@@ -288,6 +288,16 @@
               </p>
             </section>
 
+            <section class="align-items-center mt-3 col-12 col-lg-6">
+              <a href="https://www.hackerrank.com/devipilou"
+                class="" target="_blank">
+                <img src="/assets/10DaysOfJs.png" alt="10 days of js" class="certif border shadow-sm"
+                  title="Challenge Js @ Hackerrank">
+              </a>
+              <p class="">10 Days of Javascript @ <a href="https://www.hackerrank.com/devipilou" target="_blank">HackerRank</a>
+              </p>
+            </section>
+
           </div>
         </aside>
 
