correct minor french issues

--- a/presentation.html
+++ b/presentation.html
@@ -82,7 +82,7 @@
       <p>Ayant un passé de <a href="#musmili">musicien-militaire</a>, je peux vous faire profiter d'expériences
         incomparables, et d'un savoir-être très apprécié par mes collègues.</p>
       <p>Parmi mes traits de caractère, les plus présents sont ces <a href="#3c">"3C"</a> qui me tiennent
-        particulièrement à coeur: être créatif, toujours rester constructif, et ne jamais cesser d'être curieux.</p>
+        particulièrement à coeur: être créatif, toujours rester constructif,<br>et ne jamais cesser d'être curieux.</p>
     </article>
 
     <hr class="mx-5 bg-primary">
@@ -202,7 +202,7 @@
 
     <!-- CTA -->
     <article class="text-center alert alert-info shadow">
-      <p>Mon profil pourrait convenir à votre entreprise? Mon expérience vous intéresse?</p>
+      <p>Mon profil pourrait convenir à votre entreprise ? Mon expérience vous intéresse ?</p>
       <p>N'hésitez plus</p>
       <a class="btn btn-primary btn-lg shadow" href="contact.html">Contactez-moi</a>
     </article>
@@ -217,7 +217,7 @@
   <!-- Footer -->
   <footer class="row text-center justify-content-center pt-3 mx-1">
     <section class="col-12 col-sm-6 col-md-4 row">
-      <h4>Où me trouver?</h4>
+      <h4>Où me trouver ?</h4>
       <a href="https://github.com/devipilou/devipilou" target="_blank">Github</a>
       <a href="https://www.linkedin.com/in/pierre-loup-perez" target="_blank">LinkedIn</a>
       <a href="https://www.hackerrank.com/devipilou?hr_r=1" target="blank">HackerRank</a>
